2004-10-23	Jeremy Cribb
	* load_video_tracking.m: added filter on input file (in case it's not a struct).

2004-08-22	Jeremy Cribb	<jcribb@email.unc.edu>
	* load_video_tracking.m: Repaired documentation (did not explain relative/absolute position choice in parameter list)

2004-06-26	Kalpit Desai	<kvdesai@cs.unc.edu>
	* tclip.m: Made 'all fields' as default for fields to be clipped.
2004-06-22	Kalpit Desai	<kvdesai@cs.unc.edu>
	* tclip.m: Fixed a typo.
2004-06-22	Kalpit Desai	<kvdesai@cs.unc.edu>
	* tclip.m: Added feature to select only those fileds which are wanted in the clipped dataset. All other fields will be removed. Saves hard-drive space.
2004-06-18	Kalpit Desai	<kvdesai@cs.unc.edu>
	* tclip.m: Reduced the tolerance level for finding correct clipping points for low bandwidth data to 0.0005 seconds from 0.05 seconds. Provides more precise clipping.
		
2004-06-17	Kalpit Desai	<kvdesai@cs.unc.edu>
	* tjoin.m: Fixed a bug that was throwing out the meta-data information when two datasets being joined are themselves result of two/more datasets previously joined.
2004-06-17	Kalpit Desai	<kvdesai@cs.unc.edu>
	* load_vrpn_tracking.m:
	- Added default storing of uct_offset (universal coordinated time of first sample) within info.orig
	- Changed default bead size value to 'NOT AVAILABLE', instead of 0.957
	* plot_vrpn_tracking.m: commented out the time-offset removal from 'laser' field 
	* tclip.m : Replaced 'varargin' with 'nargin' as it should be.
 
2004-06-14	Kalpit Desai	<kvdesai@cs.unc.edu>
	* load_vrpn_tracking: 
	- Added feature to select displacement units (meters|microns) of position error, stage reports and bead positions. Previously, this was only possible for stage commands